[package]
name = "dwfv"
version = "0.3.0"
description = "A simple digital waveform viewer with vi-like key bindings"
authors = ["Pierre Surply <pierre.surply@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/psurply/dwfv"
edition = "2018"

keywords = ["eda", "vcd"]
categories = [
    "command-line-utilities",
    "development-tools::debugging",
    "embedded",
    "parsing",
    "visualization"
]

exclude = [
    "examples"
]

[badges]
travis-ci = { repository = "psurply/dwfv" }

[build-dependencies]
lalrpop = { version = "0.18", features = ["lexer"] }

[dependencies]
gumdrop = "0.8"
lalrpop-util = "0.18"
lazy_static = "1"
regex = "1"
tui = "0.9"
termion = "1.5"
