[package]
name = "dwfv"
version = "0.3.0"
description = "A simple digital waveform viewer with vi-like key bindings"
authors = ["Pierre Surply <pierre.surply@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/psurply/dwfv"
edition = "2018"

keywords = ["eda", "vcd"]
categories = [
    "command-line-utilities",
    "development-tools::debugging",
    "embedded",
    "parsing",
    "visualization"
]

exclude = [
    "examples"
]

[badges]
travis-ci = { repository = "psurply/dwfv" }

[dependencies]
gumdrop = "0.8"
lazy_static = "1"
nom = { version = "5.1", default-features = false, features = ["std"] }
regex = "1"
tui = "0.9"
termion = "1.5"
