[package]
name = "dwfv"
version = "0.4.1"
description = "A simple digital waveform viewer with vi-like key bindings"
authors = ["Pierre Surply <pierre.surply@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/psurply/dwfv"
edition = "2018"

keywords = ["eda", "vcd"]
categories = [
    "command-line-utilities",
    "development-tools::debugging",
    "embedded",
    "parsing",
    "visualization"
]

exclude = [
    "examples"
]

[badges]
travis-ci = { repository = "psurply/dwfv" }

[features]
default = ["cli"]
cli = ["gumdrop", "tui", "termion"]

[dependencies]
nom = { version = "5.1", default-features = false, features = ["std"] }

# For feature `cli`
gumdrop = { version = "0.8", optional = true }
tui = { version = "0.9", optional = true }
termion = { version = "1.5", optional = true }
